# RDFCraft

./: .eslintrc.json  .gitignore  .prettierrc  Dockerfile  DockerfileJava  DockerfilePython  LICENSE  README.MD  README.md  bootstrap.py  docker-compose.dev.yml  docker-compose.yml  justfile  main.py  next.config.js  openapi.json  package-lock.json  package.json  pyproject.toml  report.xml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: build-docker-image.yml  build.yml  test-server.yml
app/: package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
app/src/: App.tsx  app.tsx  index.scss  main.tsx  yarrrml-parser.d.ts
app/src/consts/: mapping-language.ts  mapping-theme.ts  toast.ts  xsdTypes.ts
backend/: .dockerignore  .gitignore  Dockerfile  bootstrap.py  logging_config.json  main.py  requirements.txt
backend/helpers/: pydantic_uri.py
backend/models/: __init__.py
backend/templates/: mapping.yaml.j2
backend/utils/: __init__.py  ontology_indexer.py  password_util.py
docs/: README.md  _sidebar.md  index.html
docs/guide/: generating-mappings.md  mapping-interface.md  mappings.md  ontologies.md  prefixes.md  workspaces.md
mongo/: init-mongo.js
mongo/data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-6329732019126321561.wt  collection-10--1279868395637534080.wt  collection-2-6329732019126321561.wt  collection-4--1279868395637534080.wt  collection-4-6329732019126321561.wt  collection-6--1279868395637534080.wt  collection-7-6329732019126321561.wt  collection-8--1279868395637534080.wt  index-1-6329732019126321561.wt  index-11--1279868395637534080.wt  index-3-6329732019126321561.wt  index-5--1279868395637534080.wt  index-5-6329732019126321561.wt  index-6-6329732019126321561.wt  index-7--1279868395637534080.wt  index-8-6329732019126321561.wt  index-9--1279868395637534080.wt  index-9-6329732019126321561.wt  sizeStorer.wt
nginx/: nginx.conf
server/: __init__.py  logger.py  server.py
server/const/: err_enums.py
server/exceptions/: __init__.py
server/facades/: __init__.py
server/models/: export_metadata.py  file_metadata.py  mapping.py  ontology.py  source.py  workspace.py  workspace_metadata.py
server/service_protocol/: config_service_protocol.py  fs_service_protocol.py
server/service_protocols/: config_service_protocol.py  db_service_protocol.py
server/services/: __init__.py  config_service.py  fs_service.py  workspace_metadata_service.py
server/utils/: Dataset.ttl  ontology_indexer.py  rdf_loader.py  tmp.py
src/app/: layout.tsx  page.tsx
test/: __init__.py
test/test_assets/: test_ontology.ttl
test/utils/: ontology_indexer_test.py
(+294 files in other folders)
